# Incoming

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  projectplan.md  pyproject.toml
app/: config.py  geo.py  logger.py  main.py  models.py  monitor.py  store.py
data/: lamas.json
frontend/: index.html
tasks/: prd-config-settings.md
tests/integration/: test_oref_api.py
tests/manual/: monitor_oref_30m.py
tests/unit/: test_frontend_ended_handler.py  test_frontend_filter_input.py  test_frontend_state_dismiss.py  test_frontend_state_partial_clear.py  test_geo.py  test_monitor.py  test_monitor_blip.py  test_store.py
